fix : 혜택선택, mbti 결과값에 카드광고 추가